--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 <li id="menu-item-245" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-245"><a href="">Marketplace</a></li>
 
 </ul>																					<div class="footer__copyright">
-							<small>&copy; Copyright <strong><span>Relics of Ecstasy<?php echo date("Y"); ?></span></strong>.</small>
+							<small>&copy; Copyright <strong><span>Relics of Ecstasy 2022<?php echo date("Y"); ?></span></strong>.</small>
 						</div>
 									</div>
 			</div>
