--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 										</div>
 									</li>
 															</ul>
-																									<a href="https://www.instagram.com/ar/1768504866820220" target="" class="btn">Check Out Ecstatic Faces Ar Filter</a>
+																									<a href="https://www.instagram.com/ar/1768504866820220" target="" class="btn">Check Out Ecstatic Faces AR Filter</a>
 											</div>
 				</div>
 				
