--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ _gaq.push(['_trackPageview']);
 
 																																				<a class="d-card" href="" target="_blank">
 									<div class="d-card__img">
-										<img src="https://imgur.com/a/ZJjYFdN" alt="BLISS">
+										<img src="https://i.imgur.com/4j5dQGxl.jpg" alt="BLISS">
 									</div>
                                     <div class="d-card__text">
 										<h4 class="d-card__title">BLISS</h4>
