--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ _gaq.push(['_trackPageview']);
 
 																																											<a class="d-card" href="" target="_blank">
 									<div class="d-card__img">
-										<img src="https://lh3.googleusercontent.com/maisdvciR-q7iiwkyQSGEslyy9Xwp5ipPYMBD8AxPqi2z2OQ031IYFtI3eZo09EvZIWssg87X1yt3KLg-mCq2PuUSD41qcn8UcYwMzoAYXRGDQuDqpF81Di0fds92eZ312A0r1n0L1NOeB1ZGHsTNoF6vnKeCzvszcTVxyVRH98FAUX2-B4v6uCkjRtvklZ5hQD23w06YsDl0kFTlQRjOrbFvDEFPJmMUUR3kNaLKvst6rveFkQ8wuNvPZ94vqVGTqofuzvd1eQSo6fG_UEft3Ub2Y8SlT8j_f69YyJ5OGZjgRBxjutDFJaOhe-fwRig5rVP3HxVlk_8QQEnBbTjQ7JewnFLuKxFnNR_bWJpzGeTWtjHqVQxzN0mtoDk-hh6jKekh4sKMf1BITZ3DImDNlnTRbewAo1gtPYiMjygNvFJ4TN2Gk70_mrDnl6o3ZEce70BP3u4miPRvFZqXlJYmaiJQcfyGsabaMU1S0nzTwbsDz5PRzoz1pEHK0eyIC7E_I_b1VIkLe3dwjqAlu-RvzPIRBsjQT5pj_tO4Lkok5WnPVU1Ux13YdrvK0RoyY2cLN_iRcKpKWwr-UPHUhPkePNFPQghTeuXDxBjNeXb5YAwYSayyRdhr3NwHKs70Lrw1iJfnIpJhC0n8eglNW00oFQYvdDC3I0sXyW8LGDo0l2rzotyFcXi0D3nNW05zPVXj7xjeEz7zOWmu5LS0ojLXuKg8GABzAxgP2fslpkEhucMcvjdx4enoT1mmN8=w962-h914-no?authuser=0" alt="ICEMAN">
+										<img src="https://i.imgur.com/ggWYYzKl.jpg" alt="ICEMAN">
 									</div>
                                     <div class="d-card__text">
 										<h4 class="d-card__title">ICEMAN</h4>
