--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
 							<a class="feature-card" href="" target="_blank">
 								<div class="feature-card__img">
-									<img src="https://lh3.googleusercontent.com/aR6qD3srYpuXK6mnC3V9wP75oM2fb2DnRANiiY5NGjjIEMeV5ndwGFnBW2Qvw_eZ3lJpuoDoOVoodTSmtOmVMX1k5cniHTkKpgf2xQp7oeHYiNlpb0oLKpKHrdc5Sh8OVzvKxjbxtDWn5wG3xgBqybp72U-HWsxJoeY6FZmLsgyO4UYth_K47xz2Xo8yioehYcLMk9cTJbBcKmASk2Kklnkb6WFlMKPEKXJAGIbds7wQdgcr1rReTDFAXDNEwMbfGOy16sG2Zqxf9QuWMZVKndHPtERSztmJXq5gtZM8FTRVxUXqssQ-ielLbAPE_qPT4teT6TyRKgx93veDvNgo0OqrfpBSR0ctmfd4bcx7uKquupCVL5sty3nKOhImKwmzNOFSAgtxYh1TMof7B5koeeuBhjtKoT8tKzh1O8a8yN-sFWTT75ZeWvQC8YDVpeCM2X0lWEc8WZjytLaSCT1yPCGU_5w3cAagp3eU0BENZXi1CE3wFSzmsnzDGfmmYjJtljNKgmkZKbnFZIR0XcKcnS6QwEX6ASnqPc8x5Olz1KylP5Kev7PeE5guLei6zI4HyvfS0xwiE-ncag12hZpuUu5HbN298soNeTQ-7PW7rdndcJ3e7deut-NMVOucts1eoDq-0ftHG9bJFZuU0ruDwjDXNkVw-ztKwRVlzB4O2OFOTYTdX1HTxvdM7wCngeP8aOBJz5CoGworrjYwvRtxzqiPbAZBzQr5PA2SZoUo00AFWTOK7XQyvUqtoMA=w960-h914-no?authuser=0" alt="GAMER">
+									<img src="https://i.imgur.com/4KylULal.jpg" alt="GAMER">
 								</div>
 								<div class="feature-card__text">
 									<h4 class="feature-card__title">GAMER</h4>
@@ -418,7 +418,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
 							<a class="feature-card" href="" target="_blank">
 								<div class="feature-card__img">
-									<img src="https://lh3.googleusercontent.com/zvTyFJIr5_L-UB6IZiJlMZjx7stOkT4gLQ9KdVl2ffyRMkTdOyf5GnBjFF6Z0C8CTuaVCoqx7x_-THYv74x7Hjo_PpgOGN3TfEqBUe4AYRx-w7Fs7wY3hrftlLIgAhjZoQj7a-9113ipl99ipCoeDrYbZ_sS8haA_DhV5vleOJxfdQwcho25kaB6kCSy6mYERLSo0zwcFa_1KmuvUztQdGEHPqvlkS8-7ioHmOuU03ULfNSYw5PF_Tz287Tt9Ra0HxyRJKoFHET5uudIX84ngGeUz9zhxM5R4M1Dup1eO5ZIBCLH5us_P9xnf5mIiiv6uLg7a6T47cj8FDHKasWIr7zeMdDujOgf1pr4J8VuskJ1XkhnsN7c_dO1i89497m87k-J-oJh8bpvaPrOC8Hssye1Est9nJp9NCxaUz-h-NB9i1ofKJWyK2eg6Uw7uR3byJ9DCeSQN9W50GlJ6gjPb1BpjXC2Qqxs37ek9RMC_1a9p8ZdCSYpIbgVjhRXtWEhL7b0gIte8Jq3nchx5WEpjVEB19-gG7tySUiQBPbPHE2eINl02vAWpSW8zGWWkMm3cI8Dc46hoRAlG_oWrc0iMJPecu0udPDcYTnzLmWfTskhHn07Vkz_LN5s57j5xSblr9PNfqhusB7G3Y7zUXbOE5bA1cOs1sdq0qDggVDkbvB3E_npvzFR0YFFSGQ5V9gIkw4NYT3fNqpzsrAcx47EvwZ3QhSXZgzK78BFB40czv67znYypubH_x-TL2E=w962-h914-no?authuser=0" alt="PIRATE">
+									<img src="https://i.imgur.com/NdIOjfBl.jpg" alt="PIRATE">
 								</div>
 								<div class="feature-card__text">
 									<h4 class="feature-card__title">PIRATE</h4>
@@ -428,7 +428,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
 							<a class="feature-card" href="" target="_blank">
 								<div class="feature-card__img">
-									<img src="https://lh3.googleusercontent.com/pa4VlmWBgHRyN6Gpey4F-nnm8U-kj3cxMK67HrQ0nJZzdD50YJ0R-bcgp3YmYKFkYC_x1CrubBEizVwiiNNErUipsucUpU_yfj8EuW7D1FO73R229Ndg8doA6wstBivDPGL0GYY_IDU6Q6fBVMuwhlX9l8_HZZRI0beiuO3RvlVmm1gZ8UxlJYYf7w-qtuOZDTLQWj8pCu7jqFffNkpF9TejGai0dHp9y2matXiuJEBWMtNYr1as6-WPh7jKsWWtswrx0co6h5hks0wgCm5Pob1UPWKXmSpJgrl2L13aaWxMERVS2jp4fxfaQTodXbyn2slfo9tnvTVajMfjJT7jgXBjJjA1M02CjAaf2yncsykURe4mWDD01W_r4kx4uUfa6ZqaRDNY_Zt_D4kesnCQaL1U2FreoSU7bhi8GAVEbdD-s_cQr7AGjYyhQxPuu9b7ncC7g4Tzr22wmgDg5TOvOKiGAXpR9gILa4r-8ZbJHwR4JG5d4kGOBPLGvqUuH5eAOuVQ6r6gX78BFGHNpyJBXBtYrcS__cFmlxxd-iaIRbKGAOqPmX9pjNShTXJMmb4foTJlb4i96XclgJVwIStjIlqN_-Ms77hTINVEhxcs62VX_fTod5wQ54rE1wvSyMSm9MSma7g3U8J1LJFYNsc5RJGL7QZZCju6vZ7t71mO-5I8afuaYDO6s67ZbsNLX1Ow7vXOapd3A_0_t2CQU7L-lwXa-L3p4dFtfbHoPq85rx43dseRgiWlKxWdvwk=w962-h914-no?authuser=0" alt="2PAC">
+									<img src="https://i.imgur.com/1l3tGGzl.jpg" alt="2PAC">
 								</div>
 								<div class="feature-card__text">
 									<h4 class="feature-card__title">2PAC</h4>
@@ -438,7 +438,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
 							<a class="feature-card" href="" target="_blank">
 								<div class="feature-card__img">
-									<img src="https://lh3.googleusercontent.com/FZj6HMMpCK-6gp5sjEJKrVxmzxqGd0jYpnlWYpXTfU9HGMF8C0PzkRVVvmQGHok4NgAozdn4D7YB8fDS-tXad8PXPoXwQSL1COGT4cjJwP5L3yl9gQzNFaGXrwTMsccJImgMEpoMiqvRyK38qNgmVOyya0l7KA3GrXCgyG99TUtxkk8473w8pDsxjdCfF6EWq-PoU0jSiOTF2OFIAd1Ivqeq7X2ZfPR1M7lWPaE7CYTguhaQOihVTJQwdI7i1d2ylIULQhxkQqdbqFOMbsObXtTIWQs-GmerX5zyRWW292QpdyaXjhq_ixED7un_952OppMQHk0VWrWbIFvD2M3cWu-I0jWCnNDY4DozrqJOVCxRYyXjz1NJtsenzkU0sFiG-A3GjFGaWFPmj1U6InhwuQJC7LNHqZ5PKyF9xrNhlLsjKLQwkTrE-lU9un9y918OepvLElxpmeMufYMl8hW5VcbzWeDtRwZpgsSHRPeETjTiZhkScbhj5bhE_IF4pqx-kD92nsondG7cnPtSDJJgeg9-CEbKV2FNs4jSq58UQA6h-wNzOBQGJYpFWSIxuQRq0zfpuLIzXvtwXFUZhK-pBtzY_MdY74vmQ0OHonpCG6JEeesESNjLsPqXu1_qmyrde5Gy3x8SktJXP750noLH-nEYl0vYcxEcGHb6OoPsE_jVSRDF_bGyQ-6a8HJaxJsO1XPsSsPvbVoe5RSn9nJ90rP2kTWK7DFaULcWyqbK2QTSIS6dbaInWvnEQgM=w962-h914-no?authuser=0" alt="CHIC">
+									<img src="https://i.imgur.com/PGQZH60l.jpg" alt="CHIC">
 								</div>
 								<div class="feature-card__text">
 									<h4 class="feature-card__title">CHIC</h4>
@@ -466,7 +466,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
 							<a class="d-card" href="" target="_blank">
 								<div class="d-card__img">
-									<img src="https://lh3.googleusercontent.com/WcRofFRfRLpkJrNPBuvvtA5XnXGx7AP-gXukbd7va1WFrDTwtENPX-F6-C77_1mzwYNHgcN1BaYApa8DeW6-EWlk3bamzgrtDypfWe9IznE49x3jaMH6u12SWRkFNrCbUpzZw6hDT-WAHSKic9VGBuh0gR7zgD9cBFJ25PXIG1iC08qru53o3BZFv_zE6SQcsUMjgQi9o5TZGfdCoXbrA3YspuxUGpEXwQtY1JdS2bqRFk6kDZgO8axat5AMuRuu0JGN34-DM4qEc56b6HxLL9blpq2WeKAEYGxbW-z7lCrwffUpI8_TGE-YBEiCX03C9t9Js5grWyJS8W0v4vQ-By1S2SRNYNxOFZX-tNhM-hsDcIyLNDK6uzYmUCRDR4Jj29YGCJ3aSVmaB_AlcmrmziSZp2U94yD9SaQDuAcOZW05D81Y048cJv43hyCW8sQTi86Ua4la-tTrc4SNmh_9i9H6MEnUOGnj3FTFskDf3Vq4l6nX45j_gG5XV1qnT-osu7ISskjvnkxTLp70BvnRntGrP6WcSuzu1QiS2XtkdzDIBOO4N8laN2dH0xBnhjgRRAOq0A4OP1FeBzvLNKMWCEczqmsMEY24LZ3FEoRiAmfAmXMo1f7EMXjjP0ehjDgFbUBTK1l-8t5IdA5fFMrKJQn-EKkQFOEftiIZ9vJuBW7KpciX8xAFRs0wJKY953Ugh8kTuj2Av2saU-1JO7A_DosUmwFSD0RVDlbTlqrIGYl5FbXIOt6xvewpc_k=w962-h914-no?authuser=0" alt="ROBO">
+									<img src="https://i.imgur.com/sQVwokBl.jpg" alt="MARIUS RELIC">
 								</div>
 								<div class="d-card__text">
 									<h4 class="d-card__title">MARIUS RELIC</h4>
@@ -478,7 +478,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
 							<a class="d-card" href="" target="_blank">
 								<div class="d-card__img">
-									<img src="https://lh3.googleusercontent.com/2_eQqkKk7RpVWma9Oyk9i7C6QX7VCRuAmYMNfwvvcFxv3uOjAlATORoITqkg_DgvIwteLTC9RU4SkoanKg6-kSp_HW7CLaY6JVxDabPlZTsUVJOWIYziUJ0yPmiioGyj2oOE58_Y7epK1pI4TjQU98wmLTqoTbAeiF32Ts5mUbRjTJjp169fstl5q5BhYQ5p-nSsrAzKKJ1JnsIZbfrJBYScMhw0kSW65eIkBPlRmC6-VJTa8MVa5Y_Y8_h-QPNcg6doXEic9gum886EjiiMOCpmIzLzVF4Kq2H1YjYXhxItVb8253EhaV3LTljvPN4FooZlCYB-PbcWqxnBCTeATFnVtv0hpEniXUpQ5mjijhZlTFgs2cWv7G9nvonMKCXo9u0LYNHjZrf0gCPfcVWkIZIwTjKQq8ZWwI3QRL4rotu0QwwrO-dmIEStP-if2SObhxivblL_SI-KvHNDZObsH2ZPLPQ5jL25Kf85URwQrd7J-0WVhnbzTsBteqmUFvA_516uJ6WoDz-tAGghrv5DQ40b7VkEeDFsK1xRtm73oD4C3BGQgL-4tq7EFWWQTENq1kDU4STX-_6ysMF0uoL0wssoyeackpiQKcKvazxam4EDAuQEBEOBiytRdrxpspR2573mXACsNyQLMX5jp0m8l7BY4Y7ivu8j1Z31h8w36MkLuD0EHU9LGSVJ8XdIJKvNx9LvEEM1kDlUN1FYatM3LcTSXaFA9OSb7WdHG2rznJpm1QJpNWnBkwNvbVM=w972-h914-no?authuser=0" alt="LED RELIC">
+									<img src="https://i.imgur.com/moubYu1l.jpg" alt="LED RELIC">
 								</div>
 								<div class="d-card__text">
 									<h4 class="d-card__title">LED RELIC</h4>
@@ -490,7 +490,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
 							<a class="d-card" href="" target="_blank">
 								<div class="d-card__img">
-									<img src="https://lh3.googleusercontent.com/1wj1Y3mbTMpdSv5kJjR0LPKKO_F3AfvfXtB-kiE_Hryu3xQwN8wRBjFsD_gpPqmZe_b7sq4ZADeGHcqTXbm3al4pqKG_qLrtnQxsugPxSDt_EXfnmMOKhLGjb1hbj_icruFkBoDoeXPZZc870rmx-ykahc-3WijtO6CVbn48yW9vuWAiV758F6kooWiN1qjNvjSmZtrA081pVXF390MLt6F25R6ykQUGY3136ra_h1A_zFl75c09tdrlDKkQ1H1Ec4cAJkK_hE7_zXd3UsG1dO2P8_-LYqC4see2-YpXwGoAlXbLQvqIgFyJfFDeAwXnUpdwEVUh5fLoe-ZS5eMCalNvFO3m9oq37udvTTEdblsv_YK5LsY57I5L-CflTwSOKLKyVixvo8KkHb-jdIGl3B33oW6_M0j3Mp1cSamAwiUAmtEdBjnNQiNhYl0pF51uPtT-wADcFguQsFJ2LNBuIMNOpe-YQ7wuCsP4J0idy2wfc02c7Ho_QdzMMXdqPxmE5GqqMGQwH1M9tGS8Z4cK5RkLj0lQVkl8NyMa44XTlEv2YAc9dzvz1LwQ4pV6MhRbGCmGaNmy-UPoUIrGtLs3UtDLNGuYYGj6SnasHsi0vgfWF7P6eaTqdEjO5qyvA-uC9rfBJ-NLXyU1QLhYvyna2NL_J5_m-NJ02_TnKxVOOdTEdR0nviZNM0UfjLL_lo_kyERRqPQUbmTgMtUAWhQk9xLY98blLydRyBVtllvGa86n-uRoZeEt9vHPepA=w960-h914-no?authuser=0" alt="OMAH RELIC">
+									<img src="https://i.imgur.com/UvEGk6kl.jpg" alt="OMAH RELIC">
 								</div>
 								<div class="d-card__text">
 									<h4 class="d-card__title">OMAH RELIC</h4>
@@ -502,7 +502,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
 							<a class="d-card" href="" target="_blank">
 								<div class="d-card__img">
-									<img src="https://lh3.googleusercontent.com/mEL1DHchIGePDYa31m-RUKAyfdBlY_EA29dFSK13vPSGnVj4ycmBvpx9SkIvIjUUmnoK-EBfF9q59u6nf277W3PbrqhiYQV-ityctPzHAEZrjk82Vc-er9Zfr_-RoOE3eB91YMjv_2ZBf3hmrubquUCRF2TerG2bODxU6OGXEhhAMGlRNhFBIi0cgoB_D7jf5VHxfAiAwwcqfFd-BKhN_2K4Z9gHFOSOteH0prHUj0_DAuTwI1pbS7INmyGPmSX5duOIlGoJlskOfsat079Dd2NqBAI3X4SFL7P-_hje5dpK2tGDw6FRjE0Sd7cvWof7pN9l9xAFQh9_z8h8Wwd5WjXzZoeoAlCldE2maR6VLTsttYEuIRzewv7g9GXrcvL6S219apWnzm-MbsQTKqC1YGHXuSKe1Ro1L83GvpKzF_rj-DdaAP8i9l4a1x55VsjkhYjRG_rB5ppgXTVxvHDUWQj-sg6tgZA0bpE-gu1X6rHCvoTheFRtOR5PgkU9kmhG3q7ej1bsd70iRU8A0tjNaaksaPGEJTU6lMS8BxltsjKDhov5aw3F2vdmLlnRurfYFhclo6Fokom15ZfbqLK_Dg5HArx_8Q8O4tSfjltrfo80TNnQPCIzB8S3ZH83s2Vq_NHVsnjszG9uPXux4uOiOhOQPclMGvEp4_V83WZyQScx3m7Z1awW9pYxwgm748HMuBlyso5GVD5wrEm9JHDwUxEv3jXIMnV7AX3XLt_NJxM40ymYlHLutpWvmTM=w1013-h914-no?authuser=0" alt="ELAN RELIC">
+									<img src="https://i.imgur.com/nLdar54l.jpg" alt="ELAN RELIC">
 								</div>
 								<div class="d-card__text">
 									<h4 class="d-card__title">ELAN RELIC</h4>
@@ -514,7 +514,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 											<li class="wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
 							<a class="d-card" href="" target="_blank">
 								<div class="d-card__img">
-									<img src="https://lh3.googleusercontent.com/O6-koG_e9fFXbbnlhtDf1GiJeV7a-qiMIqNwQkGf9vHbm3IM8qJLJh8yUfawUaB1CdTNm_VZvH2zDULuF-WpFZQFT2U6WDKqcxZvr-mu3in3DIdM2Gm84DemWnUCSg6flcZyJl6EYLaE0dJcgpAKunLFFJwXV5Azw-LaOIZtnIKkl-cqICZ_u1nMpMeilqUhZwkyL7p-dEQZw0QYcxhGGkguFdOigLKiiYtZInUcl-WiuAZ7k0wrVsdkyoWna8do-M2OGwRcBUqqvx6FDKYhaYv8Ab1pSYhGsWjfXp58dhuX4UVLlIq6bSK-fb836te6OG0paRv0n2HmDwL3L0cmR4UoSLFOcENH9sduV-9tUWcuuEBVuNAQShhDWU5erqcCdYUEjbSg8pQXkHksJdM8Mh1yW5hC5xu3iSoxWJPNjnyutPDPaJ836aBTi0jYex11AVjWKAzmq4CIy5OewI09izm9rk8lkyAOSTTXKZjv-xviGE7mcvnT60JTIp12Z_Rbt8o_5_My2ZmDafgpsIDJW_PQqEIjXuslJrWCBwEEYbGMVAMV4JtOBWsLzAFb2A1_g2q1Q3OZ9tX_HWjjM5c1uOZkn_ERk4MThaiHe952FAnoqjZojY_7Ar_PGyFq51DE9G-o1bDiGN3SsFjt9cdAt2goa9RyMjD2jAs7iPARADJR_s1n4BbMS-YNsUTbNPBVCxkOK4vo34yh2sRo3lHynbqyalRsegUq35ZmRxIQNwMv8y0WmyKR4PM4vHc=w960-h914-no?authuser=0" alt="BUCK RELIC">
+									<img src="https://i.imgur.com/J05EJ7Wl.jpg" alt="BUCK RELIC">
 								</div>
 								<div class="d-card__text">
 									<h4 class="d-card__title">BUCK RELIC</h4>
