--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 						<h2 class="footer-baner__title" style="color:white;">Don’t miss out on any update</h2>						<form method="post" action="/?na=s" class="footer-baner__form subscription-form">
     <input type="hidden" name="nlang" value="">
     <input class="input" type="email" name="ne" value="" required placeholder="Enter your email address" required>
-    <button type="submit" class="btn btn--dark">Subscribe</button>
+    <button type="submit" class="btn btn--dark">Join Our Whitelist</button>
 </form>		</div>
 	</div>
 </section>	</main>
