--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ _gaq.push(['_trackPageview']);
 																			<li><a href="" target="_blank" class="icon-twitter"></a></li>
 																			<li><a href="https://discord.gg/xF5kCbg7uu" target="_blank" class="icon-discord"></a></li>
 																	</ul>
-																															<div class="header__btn-box">
+									<a href="https://my.forms.app/form/62b03284bd94a175bba43884" target="_blank" class="btn btn--small">Join Our Whitelist</a>																						<div class="header__btn-box">
 									<a href="" target="_blank" class="btn btn--small">Marketplace</a>
 								</div>
 													</nav>
@@ -548,6 +548,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 									<div class="press__quote quote">
 										<p>We want this project to fly high and reach more people who can understand and connect with what we are about; a community that pushes itself and
                                             raises our flag as many times as possible to let the world know that we are here; the RelicsOfEcstasy have come to stay .</p>
+										<button type="submit" class="btn btn--dark">Subscribe</button>
 																					
 																			</div>
 								</div>
@@ -565,7 +566,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 						<h2 class="footer-baner__title" style="color:white;">Don’t miss out on any update</h2>						<form method="post" action="/?na=s" class="footer-baner__form subscription-form">
     <input type="hidden" name="nlang" value="">
     <input class="input" type="email" name="ne" value="" required placeholder="Enter your email address" required>
-    <button type="submit" class="btn btn--dark">Join Our Whitelist</button>
+    <button type="submit" class="btn btn--dark">Subscribe</button>
 </form>		</div>
 	</div>
 </section>	</main>
