--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ You are a Relic of Ecstasy because each character created was created with you i
 									<div class="press__quote quote">
 										<p>We want this project to fly high and reach more people who can understand and connect with what we are about; a community that pushes itself and
                                             raises our flag as many times as possible to let the world know that we are here; the RelicsOfEcstasy have come to stay .</p>
-										<button type="submit" class="btn btn--dark">Subscribe</button>
+										<button href="https://my.forms.app/form/62b03284bd94a175bba43884" type="submit" class="btn btn--dark">Join Our Whitelist</button>
 																					
 																			</div>
 								</div>
